packages/optimizer/core/src/snapshots/qwik_core__test__jsx_member_tag_object_is_captured.snap
---
source: packages/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$, $ } from '@qwik.dev/core';
import { Home } from './icons';

export const Cmp = component$(() => {
	const ui = { Home };
	const render = $(() => <ui.Home />);
	return <button onClick$={render} />;
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_Cmp_component_4ryKJTOKjWE = /*#__PURE__*/ qrl(()=>import("./test.tsx_Cmp_component_4ryKJTOKjWE"), "Cmp_component_4ryKJTOKjWE");
//
export const Cmp = /*#__PURE__*/ componentQrl(q_Cmp_component_4ryKJTOKjWE);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAIA,OAAO,MAAM,oBAAM,0CAIhB\"}")
============================= test.tsx_Cmp_component_4ryKJTOKjWE.js (ENTRY POINT)==

import { Home } from "./icons";
import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_Cmp_component_render_gINI8iM0yG4 = /*#__PURE__*/ qrl(()=>import("./test.tsx_Cmp_component_render_gINI8iM0yG4"), "Cmp_component_render_gINI8iM0yG4");
//
export const Cmp_component_4ryKJTOKjWE = ()=>{
    const ui = {
        Home
    };
    const render = q_Cmp_component_render_gINI8iM0yG4.w([
        ui
    ]);
    return /*#__PURE__*/ _jsxSorted("button", null, {
        "q-e:click": render
    }, null, 3, "u6_1");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;yCAI8B;IAC7B,MAAM,KAAK;QAAE;IAAK;IAClB,MAAM;;;IACN,qBAAO,WAAC;QAAO,aAAU;;AAC1B\"}")
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_4ryKJTOKjWE",
  "entry": null,
  "displayName": "test.tsx_Cmp_component",
  "hash": "4ryKJTOKjWE",
  "canonicalFilename": "test.tsx_Cmp_component_4ryKJTOKjWE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    113,
    220
  ]
}
*/
============================= test.tsx_Cmp_component_render_gINI8iM0yG4.js (ENTRY POINT)==

import { _capturesObj } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
//
export const Cmp_component_render_gINI8iM0yG4 = ()=>{
    let ui = _capturesObj._[0];
    return /*#__PURE__*/ _jsxSorted(ui.Home, null, null, null, 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;gDAMkB;;yBAAM,WAAC,GAAG,IAAI\"}")
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_render_gINI8iM0yG4",
  "entry": null,
  "displayName": "test.tsx_Cmp_component_render",
  "hash": "gINI8iM0yG4",
  "canonicalFilename": "test.tsx_Cmp_component_render_gINI8iM0yG4",
  "path": "",
  "extension": "js",
  "parent": "Cmp_component_4ryKJTOKjWE",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "loc": [
    161,
    178
  ],
  "captureNames": [
    "ui"
  ]
}
*/
== DIAGNOSTICS ==

[]
