packages/optimizer/core/src/snapshots/qwik_core__test__local_shadowing_destructured_prop.snap
---
source: packages/optimizer/core/src/test.rs
assertion_line: 702
expression: output
---
==INPUT==


import { component$ } from '@qwik.dev/core';

export const Cmp = component$(({ value }: { value?: string }) => {
	const readInput = (e: any) => {
		const value = e.target.value;
		return value;
	};
	console.log(readInput);
	return <input value={value} />;
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_Cmp_component_4ryKJTOKjWE = /*#__PURE__*/ qrl(()=>import("./test.tsx_Cmp_component_4ryKJTOKjWE"), "Cmp_component_4ryKJTOKjWE");
//
export const Cmp = /*#__PURE__*/ componentQrl(q_Cmp_component_4ryKJTOKjWE);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAGA,OAAO,MAAM,oBAAM,0CAOhB\"}")
============================= test.tsx_Cmp_component_4ryKJTOKjWE.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
//
export const Cmp_component_4ryKJTOKjWE = (_rawProps)=>{
    const readInput = (e)=>{
        const value = e.target.value;
        return value;
    };
    console.log(readInput);
    return /*#__PURE__*/ _jsxSorted("input", {
        value: _wrapProp(_rawProps)
    }, null, null, 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;yCAG8B;IAC7B,MAAM,YAAY,CAAC;QAClB,MAAM,QAAQ,EAAE,MAAM,CAAC,KAAK;QAC5B,OAAO;IACR;IACA,QAAQ,GAAG,CAAC;IACZ,qBAAO,WAAC;QAAM,KAAK;;AACpB\"}")
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_4ryKJTOKjWE",
  "entry": null,
  "displayName": "test.tsx_Cmp_component",
  "hash": "4ryKJTOKjWE",
  "canonicalFilename": "test.tsx_Cmp_component_4ryKJTOKjWE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    78,
    259
  ],
  "paramNames": [
    "_rawProps"
  ]
}
*/
== DIAGNOSTICS ==

[]
