packages/optimizer/core/src/snapshots/qwik_core__test__nested_segments_number_captured_raw_props_inline.snap
---
source: packages/optimizer/core/src/test.rs
assertion_line: 661
expression: output
---
==INPUT==


import { $, component$, useComputed$ } from '@qwik.dev/core';

export const Cmp = component$(({ isOpen, initialFee }) => {
	const networkFee = useComputed$(async ({ track }) => {
		const inner = $(() => track(() => isOpen.value) + initialFee);
		return inner;
	});
	const other = useComputed$(({ track }) => {
		const deeper = useComputed$(({ track: t2 }) => t2(() => track(() => initialFee)));
		return deeper;
	});
	return <div>{networkFee.value}{other.value}</div>;
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { useComputedQrl } from "@qwik.dev/core";
import { _capturesObj } from "@qwik.dev/core";
import { _noopQrl } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
//
const q_Cmp_component_4ryKJTOKjWE = /*#__PURE__*/ _noopQrl("Cmp_component_4ryKJTOKjWE");
const q_Cmp_component_networkFee_useComputed_inner_n7hnoiBGbxk = /*#__PURE__*/ _noopQrl("Cmp_component_networkFee_useComputed_inner_n7hnoiBGbxk");
const q_Cmp_component_networkFee_useComputed_ysNbpjmzm2Q = /*#__PURE__*/ _noopQrl("Cmp_component_networkFee_useComputed_ysNbpjmzm2Q");
const q_Cmp_component_other_useComputed_1mipxhl07gU = /*#__PURE__*/ _noopQrl("Cmp_component_other_useComputed_1mipxhl07gU");
const q_Cmp_component_other_useComputed_deeper_useComputed_QFbdi0j5EAc = /*#__PURE__*/ _noopQrl("Cmp_component_other_useComputed_deeper_useComputed_QFbdi0j5EAc");
//
q_Cmp_component_networkFee_useComputed_inner_n7hnoiBGbxk.s(()=>{
    let _rawProps = _capturesObj._[0], _rawProps1 = _capturesObj._[1];
    return _rawProps1.track(()=>_rawProps.isOpen.value) + _rawProps.initialFee;
});
q_Cmp_component_networkFee_useComputed_ysNbpjmzm2Q.s(async (_rawProps1)=>{
    let _rawProps = _capturesObj._[0];
    const inner = q_Cmp_component_networkFee_useComputed_inner_n7hnoiBGbxk.w([
        _rawProps,
        _rawProps1
    ]);
    return inner;
});
q_Cmp_component_other_useComputed_deeper_useComputed_QFbdi0j5EAc.s((_rawProps1)=>{
    let _rawProps = _capturesObj._[0], _rawProps2 = _capturesObj._[1];
    return _rawProps1.track(()=>_rawProps2.track(()=>_rawProps.initialFee));
});
q_Cmp_component_other_useComputed_1mipxhl07gU.s((_rawProps2)=>{
    let _rawProps = _capturesObj._[0];
    const deeper = useComputedQrl(q_Cmp_component_other_useComputed_deeper_useComputed_QFbdi0j5EAc.w([
        _rawProps,
        _rawProps2
    ]));
    return deeper;
});
q_Cmp_component_4ryKJTOKjWE.s((_rawProps)=>{
    const networkFee = useComputedQrl(q_Cmp_component_networkFee_useComputed_ysNbpjmzm2Q.w([
        _rawProps
    ]));
    const other = useComputedQrl(q_Cmp_component_other_useComputed_1mipxhl07gU.w([
        _rawProps
    ]));
    return /*#__PURE__*/ _jsxSorted("div", null, null, [
        _wrapProp(networkFee),
        _wrapProp(other)
    ], 3, "u6_0");
});
export const Cmp = /*#__PURE__*/ componentQrl(q_Cmp_component_4ryKJTOKjWE);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;;;;;;2DAKkB;;WAAM,WADkB,MACZ,IAAM,UAFH,OAEU,KAAK,cAFP;;qDACR;;IAC/B,MAAM;;;;IACN,OAAO;;mEAGqB;;WAAmB,WAAhB,MAAmB,IAAM,WAD3B,MACiC,cANvB;;gDAKb;;IAC1B,MAAM,SAAS;;;;IACf,OAAO;;8BAPqB;IAC7B,MAAM,aAAa;;;IAInB,MAAM,QAAQ;;;IAId,qBAAO,WAAC;kBAAK;kBAAkB;;AAChC;AAVA,OAAO,MAAM,oBAAM,0CAUhB\"}")
== DIAGNOSTICS ==

[]
